--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Mujun Zhang/Personal Homepage"
 title_separator          : "-"
 name                     : &name "Mujun Zhang"
 description              : &description "a fourth-year undergraduate student from Wuhan University of Technology"
-url                      : https://miracalefriend.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://miraclefriend.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "MiracleFriend/MiracleFriend.github.io"
 
